# pythonthesorimed

./: .coveragerc  .gitignore  .isort.cfg  .travis.yml  LICENSE  Makefile  Pipfile  README.creole  README.md  README.rst  api.sql  build.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  travis_pypi_setup.py
docs/: api.rst  conf.py  index.rst
pythonthesorimed/: __init__.py  api.py  exceptions.py  thesoitem.py
pythonthesorimed/parseur/: parseur.py  prototype.py
tests/: conftest.py  gabarit.py  test_parseur.py  test_pythonthesorimed.py  test_thesoitem.py
tests_local/: sand.py  test_thesoitem_db.py
