[metadata]
name = pythonthesorimed
summary = Une interface python avec la base médicamenteuse thesorimed
description-file = README.rst
author = Jimmy Girardet
author-email = ijkl@netc.fr
home-page = https://github.com/jgirardet/pythonthesorimed
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages =
    pythonthesorimed
; add datafile to be included in your distribution packages here, ex:
; data-files = frontend = frontend/dist/*

; If your library has a CLI, define here the entry point
; [entry_points]
; console_scripts =
;     dopplerr = dopplerr.main:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True



[pep8]
max-line-length = 100
