[metadata]
name = pythonthesorimed
summary = Une interface python avec la base médicamenteuse thesorimed
description-file = README.rst
author = Jimmy Girardet
author-email = ijkl@netc.fr
home-page = https://github.com/jgirardet/pythonthesorimed


[files]
packages =
    pythonthesorimed
; add datafile to be included in your distribution packages here, ex:
; data-files = frontend = frontend/dist/*

; If your library has a CLI, define here the entry point
[entry_points]
console_scripts =
	pythonthesorimed=pythonthesorimed.parseur:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True



[pep8]
max-line-length = 100
