[metadata]
name = pythonthesorimed
summary = Une interface python avec la base médicamenteuse thesorimed
description-file = README.rst
author = Jimmy Girardet
author-email = ijkl@netc.fr
home-page = https://github.com/jgirardet/pythonthesorimed


[files]
packages =
    pythonthesorimed
; add datafile to be included in your distribution packages here, ex:
; data-files = frontend = frontend/dist/*

; If your library has a CLI, define here the entry point
[entry_points]
console_scripts =
	pythonthesorimed=pythonthesorimed.parseur:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True



[pep8]
max-line-length = 100


[flake8]
ignore = E226,E302,E41
max-line-length = 100
exclude = env
max-complexity = 8
accept-encodings = utf-8

[yapf]
based_on_style = pep8
column_limit = 100
indent_dictionary_value = true
split_before_first_argument= false
split_penalty_after_opening_bracket = 10
; align_closing_bracket_with_visual_indent = true
blank_line_before_nested_class_or_def = true
; dedent_closing_brackets = false
; spaces_around_power_operator = false
; spaces_before_comment = 2
; split_before_first_argument = false
split_before_logical_operator = false
; split_arguments_when_comma_terminated = true

[isort]
line_length = 100
known_future_library = future
known_third_party =
default_section = THIRDPARTY
known_first_party =
    pythonthesorimed
sections =
    FUTURE,
    STDLIB,
    THIRDPARTY,
    FIRSTPARTY,
    LOCALFOLDER,
min-similarity-lines=5
ignore-comments=yes
ignore-docstrings=yes
ignore-imports=yes
import_heading_stdlib=Standard Libraries
import_heading_thirdparty=Third Party Libraries
import_heading_firstparty=pythonthesorimed
